fix: add more and scrollable covers

--- a/Week-6/esercizioS6/assets/sass/app.scss
+++ b/Week-6/esercizioS6/assets/sass/app.scss
@@ -1,31 +1,16 @@
 @import "./partials/colors";
 @import "./partials/mixin";
+@import "./partials/vid_hover";
+/* Hide scrollbar for Chrome, Safari and Opera */
 
-section.pickIt {
-  div.col-6:hover {
-    position: relative;
-    transform: scale(1.2);
-    transition: transform 200ms;
+.covWrap::-webkit-scrollbar {
+  display: none !important;
+}
 
-    .vid_hover {
-      display: block !important;
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0));
-      backdrop-filter: blur(1px);
-      padding: 1em;
-
-      i {
-        font-size: 2em;
-      }
-      p {
-        white-space: nowrap;
-
-        text-overflow: ellipsis;
-        overflow: hidden;
-      }
-    }
-  }
+.covWrap {
+  position: relative;
+  z-index: 0;
+  overflow-x: scroll;
+  -ms-overflow-style: none !important; /* IE and Edge */
+  scrollbar-width: none !important; /* Firefox */
 }
